--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "building-financials-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,8 +10,10 @@
     "@supabase/supabase-js": "^2.43.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pdfkit": "^0.15.0"
   }
 }
