--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "building-financials-backend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,6 +14,8 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "stream-buffers": "^3.0.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
