--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "pdfkit": "^0.15.0",
     "stream-buffers": "^3.0.2",
+     "compression": "^1.7.4",
     "multer": "^1.4.5-lts.1"
   }
 }
