--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.5",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.0",
-    "stream-buffers": "^3.0.2",
-     "compression": "^1.7.4",
-    "multer": "^1.4.5-lts.1"
+    "stream-buffers": "^3.0.3"
   }
 }
