--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "building-financials-backend",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=20.11.1"
+  },
   "scripts": {
     "start": "node index.js"
   },
